--- a/frontend/src/styles/Statuses.module.css
+++ b/frontend/src/styles/Statuses.module.css
@@ -1,6 +1,6 @@
 .postContainer {
     background: white;
-    margin-bottom: 10px;
+    margin-top: 15px;
     border-radius: 15px;
     padding: 15px;
 }
@@ -16,6 +16,11 @@
     margin: 0;
     padding: 0;
     font-weight: 600;
+}
+
+.nameLink {
+    text-decoration: none;
+    color: black;
 }
 
 .postDate {
@@ -53,10 +58,16 @@
     font-weight: 600;
 }
 
-.commentCount p {
+.commentCount {
     margin: 0;
     color: gray;
     font-weight: 600;
+    background: none;
+    border: none;
+}
+
+.commentCount:hover {
+    text-decoration: underline;
 }
 
 .feedbackContainer {
