--- a/frontend/src/styles/NavigationBar.module.css
+++ b/frontend/src/styles/NavigationBar.module.css
@@ -89,10 +89,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 1.4rem;
-    margin: 10px;
+    font-size: 1.1rem;
+    margin-block: 10px;
     background: white;
     border: none;
+}
+
+.optionContainer:hover {
+    background: #f1f1f1;
 }
 
 .optionLeftPart {
