--- a/frontend/src/styles/Contacts.module.css
+++ b/frontend/src/styles/Contacts.module.css
@@ -48,7 +48,7 @@
     position: relative;
     left: 1rem;
     bottom: 1.3rem;
-    color: green;
+    color: rgb(2, 187, 2);
     padding: 2px;
     background-color: white;
     border-radius: 50%;
