--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -106,6 +106,7 @@
 
 .profilePicture {
     width: 4rem;
-    height: auto;
+    height: 4rem;
     border-radius: 50%;
+    object-fit: cover; 
 }
