--- a/frontend/src/styles/Profile.module.css
+++ b/frontend/src/styles/Profile.module.css
@@ -39,10 +39,11 @@
 
 .profilePicture {
     width: 10rem;
-    height: auto;
+    height: 10rem;
     border-radius: 50%;
     background: white;
     padding: 4px;
+    object-fit: cover; 
 }
 
 .cameraIcon {
