Debugging for deployment

--- a/frontend/src/styles/UpdateStatus.module.css
+++ b/frontend/src/styles/UpdateStatus.module.css
@@ -9,8 +9,9 @@
 
 .newStatusContainer img {
     width: 3rem;
-    height: auto;
+    height: 3rem;
     border-radius: 50%;
+    object-fit: cover; 
 }
 
 .textFieldLookalike {
