--- a/frontend/src/styles/UpdateStatus.module.css
+++ b/frontend/src/styles/UpdateStatus.module.css
@@ -35,20 +35,22 @@
 .statusOptionButton {
     display: flex;
     justify-content: center;
-    font-size: 19px;
+    font-size: 1rem;
     align-items: center;
     border: none;
     outline: none;
     background: white;
     width: 100%;
     height: 100%;
-    margin: 0.5rem;
+    margin-block: 5px;
     border-radius: 15px;
 }
 
 .statusOptionButton:hover {
     background-color: #f1f2f5;
 }
+
+
 
 /* New Status Modal */
 .modalInnerContainer {
