--- a/frontend/src/styles/UpdateStatus.module.css
+++ b/frontend/src/styles/UpdateStatus.module.css
@@ -22,8 +22,8 @@
     color: #65676b;
     border-radius: 30px;
     margin-left: 0.5rem;
-    font-size: 1.3rem;
-    font-weight: 300;
+    font-size: 1em;
+    font-weight: 400;
     text-align: left;
     padding-left: 20px;
 }
