Debugging for deployment

--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -4,6 +4,9 @@
 }
 
 .middleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100vh; 
     overflow-y: auto; 
 }
