--- a/frontend/src/styles/Statuses.module.css
+++ b/frontend/src/styles/Statuses.module.css
@@ -9,13 +9,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-bottom: 15px;
+}
+
+.nameAndDateContainer p {
+    margin: 0;
 }
 
 .name {
     margin: 0;
     padding: 0;
     font-weight: 600;
+    font-size: 1.1rem;
 }
 
 .nameLink {
@@ -28,6 +32,7 @@
     padding: 0;
     color: #8b8b8b;
     font-weight: 500;
+    font-size: 0.9rem;
 }
 
 .postBodyContainer p {
