Debugging for deployment

--- a/frontend/src/styles/NavigationBar.module.css
+++ b/frontend/src/styles/NavigationBar.module.css
@@ -65,6 +65,8 @@
 .profilePictureContainer {
     border: none;
     background: none;
+    padding: 0;
+    margin-inline-end: 10px;
 }
 
 .profilePicture {
