--- a/frontend/src/styles/Chat.module.css
+++ b/frontend/src/styles/Chat.module.css
@@ -14,7 +14,7 @@
 }
 
 .chatHeader {
-    padding: 10px;
+    padding: 5px;
     color: var(--accent-color);
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
@@ -31,16 +31,21 @@
 
 .chatFooter {
     padding: 10px;
-    border-top: 1px solid #ccc;
     display: flex;
 }
 
 .chatFooter input {
     flex: 1;
     padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: none;
+    background: #f0f0f0;
+    border-radius: 20px;
     margin-right: 10px;
+    padding-left: 10px;
+}
+
+.chatFooter input:focus {
+    outline: none;
 }
 
 .chatFooter button {
@@ -48,7 +53,7 @@
     background: var(--accent-color);
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
@@ -61,11 +66,12 @@
 .recipientInfo h5 {
     margin: 0;
     color: black;
+    font-size: 1rem;
 }
 
 .profilePicture {
-    width: 3rem;
-    height: 3rem;
+    width: 2.3rem;
+    height: 2.3rem;
     border-radius: 50%;
     margin-right: 0.5rem;
     object-fit: cover; 
