Adjusted styles for the chat box

--- a/frontend/src/styles/Chat.module.css
+++ b/frontend/src/styles/Chat.module.css
@@ -149,3 +149,10 @@
     border: none;
     outline: none;
 }
+
+.closedChatProfilePicture {
+    width: 3.3rem;
+    height: 3.3rem;
+    border-radius: 50%;
+    object-fit: cover; 
+}
