--- a/frontend/src/styles/Profile.module.css
+++ b/frontend/src/styles/Profile.module.css
@@ -7,7 +7,7 @@
 
 .coverPhoto {
     position: absolute;
-    width: inherit;
+    width: 100%;
     height: 35vh;
     z-index: -5;
     object-fit: cover; 
