--- a/frontend/src/styles/Profile.module.css
+++ b/frontend/src/styles/Profile.module.css
@@ -8,7 +8,7 @@
 
 .coverPhoto {
     position: absolute;
-    width: 100%;
+    width: inherit;
     height: 35vh;
     z-index: -5;
     object-fit: cover; 
@@ -153,6 +153,7 @@
 .profileBottomBackground {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     background: #f1f2f5;
