--- a/frontend/src/styles/Profile.module.css
+++ b/frontend/src/styles/Profile.module.css
@@ -80,6 +80,7 @@
     display: flex;
     align-items: center;
     background: #f1f1f1;
+    color: black;
     padding-block: 7px;
     padding-inline: 12px;
     border-radius: 10px;
@@ -99,6 +100,7 @@
     background: #f1f1f1;
     padding-block: 7px;
     padding-inline: 20px;
+    color:black;
     border-radius: 8px;
     border: none;
 }
