--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,14 +1,14 @@
 .homeContainer {
     background-color: #f1f2f5; 
     width: 100vw;
+    height: 100%;
+    margin-top: 55px;
 }
 
 .middleContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh; 
-    overflow-y: auto; 
 }
 
 /* Removes scroll indicator
@@ -18,6 +18,10 @@
 */
 
 /* Left Column */
+
+.leftContainer {
+    
+}
 
 .profileContainer {
     display: flex;
