--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .homeContainer {
     background-color: #f1f2f5; 
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     margin-top: 62px;
 }
 
