--- a/frontend/src/styles/NavigationBar.module.css
+++ b/frontend/src/styles/NavigationBar.module.css
@@ -103,6 +103,7 @@
     justify-content: space-between;
     font-size: 1.1rem;
     margin-block: 10px;
+    border-radius: 10px;
     background: white;
     border: none;
 }
