--- a/frontend/src/styles/NewStatusModal.module.css
+++ b/frontend/src/styles/NewStatusModal.module.css
@@ -3,11 +3,6 @@
     position: absolute;
 }
 
-.modalInnerContainer {
-    min-width: 22rem;
-    width: 28rem;
-}
-
 .profilePicture {
     width: 3rem;
     height: 3rem;
@@ -25,7 +20,6 @@
     outline: none;
     font-size: 1.1rem;
     resize: none;
-    
 }
 
 .emojiIcon {
@@ -37,6 +31,7 @@
     outline: none;
     font-weight: 600;
     padding-block: 7px;
+    min-width: 30vw;
 }
 
 .postButton:disabled {
@@ -57,6 +52,7 @@
     cursor: pointer;
     text-align: center;
     margin-top: 20px;
+    font-size: 0.8rem;
     font-weight: 600;
 }
 
