Made left section of the home page fixed

--- a/frontend/src/Home/Home.module.css
+++ b/frontend/src/Home/Home.module.css
@@ -20,7 +20,9 @@
 /* Left Column */
 
 .leftContainer {
-
+    position: fixed;
+    display: flex;
+    flex-direction: column;
 }
 
 .profileContainer {
