--- a/frontend/src/sharedComponents/Contacts/Contacts.module.css
+++ b/frontend/src/sharedComponents/Contacts/Contacts.module.css
@@ -48,6 +48,31 @@
     object-fit: cover; 
 }
 
+.unreadCountContainer {
+    position: relative;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background: red;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.unreadCountContainer h6 {
+    padding: 0;
+    color: white;
+    margin: 0;
+    width: 100%; 
+    height: 100%; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .onlineIcon {
     position: relative;
     left: 1rem;
