--- a/frontend/src/sharedComponents/Statuses/Statuses.module.css
+++ b/frontend/src/sharedComponents/Statuses/Statuses.module.css
@@ -35,14 +35,21 @@
     font-size: 0.9rem;
 }
 
+.postBodyContainer {
+    display: flex;
+    flex-direction: column;
+}
+
 .postBodyContainer p {
     font-size: 1.1rem;
 }
 
 .media {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
+    max-height: 500px;
+    object-fit:contain;
     border-radius: 8px;
+    justify-self: center;
 }
 
 .likesAndCommentsContainer {
